# Haku_math

./: .gitignore  CMakeLists.txt  Doxyfile
include/: CMakeLists.txt  config.h  defines.hpp  haku_math.h  haku_math.hpp  hm_const.h  hm_func.h  hm_types.h  hmath_defines.hpp  hmath_types.hpp  load_store.h  matrix.h  types.hpp  vector.h
include/impl/: hm_func.inl  matrix.inl  vector.inl
tests/: CMakeLists.txt  main.cpp
